testdata/baselines/reference/compiler/quantifiedTypesIntermediate.errors.txt
quantifiedTypesIntermediate.ts(12,3): error TS2322: Type '{ values: [{ key: string; }, { key: string; }, { key: string; }]; identifier: (v: { key: string; }) => number; }' is not assignable to type 'Input<{ key: string; } | { key: string; } | { key: string; }>'.
  The types returned by 'identifier(...)' are incompatible between these types.
    Type 'number' is not assignable to type 'string'.
quantifiedTypesIntermediate.ts(24,3): error TS2322: Type '{ values: [{ key: string; }, { key: string; }, { key: string; }]; identifier: (v: { key: string; }) => number; }' is not assignable to type 'Input<{ key: string; } | { key: string; } | { key: string; }>'.
  The types returned by 'identifier(...)' are incompatible between these types.
    Type 'number' is not assignable to type 'string'.


==== quantifiedTypesIntermediate.ts (2 errors) ====
    type Input<T> = { values: T[], identifier: (value: T) => string }
    declare const f: (t: (<T> Input<T>)[]) => void
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => v.key
      }
    ])
    
    f([
      {
      ~
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        identifier: v => Number(v.key)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      }
    ~~~
!!! error TS2322: Type '{ values: [{ key: string; }, { key: string; }, { key: string; }]; identifier: (v: { key: string; }) => number; }' is not assignable to type 'Input<{ key: string; } | { key: string; } | { key: string; }>'.
!!! error TS2322:   The types returned by 'identifier(...)' are incompatible between these types.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    ])
    
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => v.key
      },
      {
      ~
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        identifier: v => Number(v.key)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      }
    ~~~
!!! error TS2322: Type '{ values: [{ key: string; }, { key: string; }, { key: string; }]; identifier: (v: { key: string; }) => number; }' is not assignable to type 'Input<{ key: string; } | { key: string; } | { key: string; }>'.
!!! error TS2322:   The types returned by 'identifier(...)' are incompatible between these types.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    ])
    
    
    f([
      {
        values: [{ key: "a" }, { key: "b" }, { key: "c" }],
        identifier: v => v.key
      },
      {
        values: [{ id: 1 }, { id: 2 }, { id: 3 }],
        identifier: v => v.id.toString()
      }
    ])
    